# auto

./: README.md  pyproject.toml
scripts/: main.py  speak.py
